--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
-    "mongoose": "^8.0.3",
+    "mongo": "^0.1.0",
+    "mongoose": "^5.2.1",
     "morgan": "~1.9.1",
-    "passport": "^0.7.0"
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
     "locus": "^2.0.4"
-    
   }
 }
