--- a/package.json
+++ b/package.json
@@ -6,25 +6,33 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.15.3",
     "body-parser": "^1.20.2",
-    "cloudinary": "^1.41.1",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
+    "cloudinary": "^2.0.1",
+    "cookie-parser": "~1.4.6",
+    "debug": "~4.3.4",
     "ejs": "^3.1.9",
+    "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "http-errors": "~1.6.3",
+    "express-session": "^1.18.0",
+    "faker": "^6.6.6",
+    "http-errors": "~2.0.0",
     "method-override": "^3.0.0",
     "mongo": "^0.1.0",
-    "mongoose": "^5.2.1",
-    "morgan": "~1.9.1",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.2",
+    "mongoose-paginate": "^5.0.3",
+    "morgan": "~1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "node": "^21.6.2",
+    "nvm": "^0.0.4",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
   },
   "devDependencies": {
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.4",
     "locus": "^2.0.4"
   }
 }
