--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@mapbox/mapbox-sdk": "^0.15.3",
+    "@sendgrid/mail": "^8.1.3",
+    "@types/mongoose-paginate": "^5.0.16",
     "body-parser": "^1.20.2",
     "cloudinary": "^2.0.1",
     "cookie-parser": "~1.4.6",
+    "crypto": "^1.0.1",
     "debug": "~4.3.4",
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
@@ -22,6 +26,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.2",
     "mongoose-paginate": "^5.0.3",
+    "mongoose-paginate-v2": "^1.8.1",
     "morgan": "~1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
@@ -32,7 +37,7 @@
     "passport-local-mongoose": "^8.0.0"
   },
   "devDependencies": {
-    "dotenv": "^16.4.4",
+    "dotenv": "^16.4.5",
     "locus": "^2.0.4"
   }
 }
